# PngPortrait2DDS

./: .gitignore  CMakeLists.txt  CMakePresets.json  PngPortrait2DDS.sln  README.md
PngPortrait2DDS/: GlobalConfigManager.cpp  GlobalConfigManager.h  PngPortrait2DDS.cpp  PngPortrait2DDS.h  PngPortrait2DDS.qrc  PngPortrait2DDS.rc  PngPortrait2DDS.ui  PngPortrait2DDS.vcxproj  PngPortrait2DDS.vcxproj.filters  PortraitDataList.cpp  PortraitDataList.h  PortraitTable.cpp  PortraitTable.h  PortraitTableView.cpp  PortraitTableView.h  PresetManager.cpp  PresetManager.h  PreviewWidget.cpp  PreviewWidget.h  PythonEngine.h  config.ini  main.cpp  zh_cn.qm  zh_cn.ts
PngPortrait2DDS/include/: PdxPortraits.h  PresetManager.h  PreviewWidget.h
PngPortrait2DDS/scripts/: Documentation.md  default.py
PngPortrait2DDS/src/: PresetManager.cpp
include/: ErrorDialog.h  GlobalConfigManager.h  PngPortrait2DDS.h
resource/: zh_cn.qm
resource/scripts/: PdxPortraits.py
src/: CMakeLists.txt  ErrorDialog.cpp  GlobalConfigManager.cpp  PngPortrait2DDS.cpp  PortraitTable.cpp  PreviewWidget.cpp  PythonEngine.cpp  main.cpp  zh_cn.ts
src/ui/: ErrorDialog.ui  PngPortrait2DDS.ui
